system_tests/type_error/type_error.glc
fn foo(int bar) -> int {
  return bar;
}

fn main() -> int {
  let x = "blah";
  foo(x);
  print(1);
  return 0;
}